--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;800;900&display=swap" rel="stylesheet">
   <meta charset="utf-8">
   <title>MeanCourse</title>
@@ -13,6 +14,6 @@
 </head>
 <body>
   <app-root></app-root>
-  
+
 </body>
 </html>
